--- a/SCSS/config/mixins.scss
+++ b/SCSS/config/mixins.scss
@@ -10,3 +10,23 @@
 @function rem($px) {
   @return $px / 16px+0rem;
 }
+
+
+//placeHolderColor
+@mixin placecolor($color: #000000){
+  &::-webkit-input-placeholder {
+    color: $color;
+  }
+
+  &:-moz-placeholder {
+    color: $color;
+  }
+
+  &::-moz-placeholder {
+    color: $color;
+  }
+
+  &:-ms-input-placeholder {
+    color: $color;
+  }
+}
