--- a/SCSS/layout/base.scss
+++ b/SCSS/layout/base.scss
@@ -3,6 +3,9 @@ body {
   padding: 0;
   font-family: 'Ubuntu', Arial, Helvetika, sans-serif;
   line-height: 1.42;
+  position: relative;
+  font-size: 16px;
+  @include ubuntu();
 }
 
 *, *::before, *::after {
@@ -11,6 +14,23 @@ body {
 
 body, html {
   height: 100%;
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-width: 940px + 20px;
+  min-height: 100%;
+  overflow: hidden;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 940px;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .visuallyhidden:not(:focus):not(:active) {
@@ -26,8 +46,40 @@ body, html {
   overflow: hidden;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  font-weight: normal;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 ul {
   margin: 0;
   padding: 0;
-  list-style: none;
+  li {
+    list-style: none;
+  }
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+}
+
+.section {
+  height: 100vh;
+  min-height: 650px;
 }
