--- a/SCSS/layout/fonts.scss
+++ b/SCSS/layout/fonts.scss
@@ -39,3 +39,27 @@
   font-weight: 500;
   font-style: normal;
 }
+
+@mixin gagalin() {
+  font-family: 'Gagalin-regular', Helvetica, sans-serif ;
+}
+
+@mixin ubuntu($style: light) {
+  font-family: 'ubuntu', Helvetica, sans-serif ;
+  @if $style == light {
+  font-weight: 300;
+  }
+
+  @if $style == medium {
+    font-weight: 500;
+  }
+
+  @if $style == bold {
+    font-weight: bold;
+  }
+}
+
+@mixin lifehack() {
+  font-family: 'Lifehack-Medium', Helvetica, sans-serif ;
+}
+
