--- a/css/app.css
+++ b/css/app.css
@@ -38,7 +38,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Ubuntu', Arial, Helvetika, sans-serif;
-  line-height: 1.42; }
+  line-height: 1.42;
+  position: relative;
+  font-size: 16px;
+  font-family: 'ubuntu', Helvetica, sans-serif;
+  font-weight: 300; }
 
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
@@ -46,6 +50,28 @@ body {
 
 body, html {
   height: 100%; }
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-width: 960px;
+  min-height: 100%;
+  overflow: hidden; }
+
+.container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  max-width: 940px;
+  width: 95%;
+  margin: 0 auto; }
 
 .visuallyhidden:not(:focus):not(:active) {
   position: absolute;
@@ -60,10 +86,73 @@ body, html {
   clip: rect(0, 0, 0, 0);
   overflow: hidden; }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  font-weight: normal; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 ul {
   margin: 0;
-  padding: 0;
-  list-style: none; }
+  padding: 0; }
+  ul li {
+    list-style: none; }
+
+p {
+  margin: 0;
+  padding: 0; }
+
+footer {
+  position: relative;
+  width: 100%; }
+
+.section {
+  height: 100vh;
+  min-height: 650px; }
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  min-height: 0; }
+
+.maincontent {
+  height: 100%;
+  min-height: 650px; }
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.section {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.31);
+  min-width: 940px;
+  min-height: 650px; }
 
 .hero {
   background-image: url("../images/bg/hero-bg.png");
