--- a/SCSS/sections/hero.scss
+++ b/SCSS/sections/hero.scss
@@ -6,6 +6,18 @@
   position: relative;
 }
 
+.hero__wrapper {
+  height: 80%;
+
+}
+
+.hero__container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -18,6 +30,11 @@
   margin-right: auto;
 }
 
+.header__btns {
+  display: flex;
+  align-items: center;
+}
+
 .nav {
   margin-right: rem(15px);
 }
@@ -27,15 +44,21 @@
   padding: 0;
 }
 
-.nav__item {
+.nav__items {
   display: inline-block;
   vertical-align: middle;
   white-space: nowrap;
+  &:last-child {
+    &:after {
+      display: none;
+    }
+  }
   &:after {
     display: inline-block;
     vertical-align: middle;
     content: ' ';
-    @include circle(5px, #ffffff)
+    @include circle(4px, #ffffff)
+    margin: 0 16px;
 
   }
 }
@@ -50,4 +73,27 @@
   display: inline-block;
   vertical-align: middle;
   transition: 0.5s;
+}
+
+.hero__present {
+  display: flex;
+}
+
+.hero__title {
+  @include gagalin();
+  font-size: 72px;
+  color: $yellow_color;
+  margin-bottom: 25px;
+}
+
+.hero__text {
+  @include lifehack();
+  font-size: 72px;
+  color: $white_color;
+
+}
+
+.hero__container-arrow {
+  position: absolute;
+  bottom: -15%;
 }
