--- a/css/app.css
+++ b/css/app.css
@@ -161,6 +161,28 @@ footer {
   background-size: cover;
   position: relative; }
 
+.hero__wrapper {
+  height: 80%; }
+
+.hero__container {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
 .header {
   width: 100%;
   display: -webkit-box;
@@ -180,6 +202,16 @@ footer {
 .header__logo {
   margin-right: auto; }
 
+.header__btns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
 .nav {
   margin-right: 0.9375rem; }
 
@@ -187,18 +219,21 @@ footer {
   margin: 0;
   padding: 0; }
 
-.nav__item {
+.nav__items {
   display: inline-block;
   vertical-align: middle;
   white-space: nowrap; }
-  .nav__item:after {
+  .nav__items:last-child:after {
+    display: none; }
+  .nav__items:after {
     display: inline-block;
     vertical-align: middle;
     content: ' ';
-    width: 5px;
-    height: 5px;
-    border-radius: 2.5px;
-    background-color: #ffffff; }
+    width: 4px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    margin: 0 16px; }
 
 .nav__link {
   color: white;
@@ -212,3 +247,38 @@ footer {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
+
+.hero__present {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.hero__title {
+  font-family: 'Gagalin-regular', Helvetica, sans-serif;
+  font-size: 72px;
+  color: #f9b43b;
+  margin-bottom: 25px; }
+
+.hero__text {
+  font-family: 'Lifehack-Medium', Helvetica, sans-serif;
+  font-size: 72px;
+  color: #fff; }
+
+.hero__container-arrow {
+  position: absolute;
+  bottom: -15%; }
+
+.order__btn {
+  padding: 10px 15px;
+  background: #e45028;
+  text-transform: uppercase;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 13px;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding-left: 15px; }
