--- a/SCSS/common/common.scss
+++ b/SCSS/common/common.scss
@@ -1,4 +1,4 @@
-.order__btn {
+.btns {
   padding: 10px 15px;
   background: $orange_color;
   text-transform: uppercase;
@@ -7,5 +7,14 @@
   text-decoration: none;
   font-size: 13px;
   display: inline-flex;
-  padding-left: 15px;
+}
+
+.section-title {
+  @include gagalin();
+  font-size: 72px;
+}
+
+.svg__icon {
+  width: 100%;
+  height: 100%;
 }
