--- a/SCSS/layout/adjustment.scss
+++ b/SCSS/layout/adjustment.scss
@@ -1,28 +1,35 @@
 .wrapper {
-  width: 100%;
-  height: 100%;
   position: relative;
-  min-height: 0;
-}
-
-.maincontent {
-  height: 100%;
-  min-height: 650px;
+  width: 100%;
+  min-width: 940px + 20px;
+  min-height: 100%;
+  //overflow: hidden;
 }
 
 .container {
-  width: 940px;
-  margin: 0 auto;
+  position: relative;
   display: flex;
+  flex-direction: column;
+  max-width: 940px;
+  width: 95%;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
 
+
+.maincontent {
+  //height: 100%;
+  min-height: 650px;
 }
 
 .section {
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0,0,0,0.31);
   min-width: 940px;
   min-height: 650px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
+
