--- a/SCSS/sections/hero.scss
+++ b/SCSS/sections/hero.scss
@@ -1,9 +1,8 @@
 .hero {
-  background-image: url('../images/bg/hero-bg.png');
-  background-repeat: no-repeat;
-  background-position: -50%;
+  background: url('../images/bg/hero-bg.png') center center no-repeat;
   background-size: cover;
   position: relative;
+  justify-content: flex-start;
 }
 
 .hero__wrapper {
@@ -57,7 +56,7 @@
     display: inline-block;
     vertical-align: middle;
     content: ' ';
-    @include circle(4px, #ffffff)
+    @include circle(4px, #ffffff);
     margin: 0 16px;
 
   }
@@ -79,18 +78,25 @@
   display: flex;
 }
 
-.hero__title {
-  @include gagalin();
-  font-size: 72px;
-  color: $yellow_color;
-  margin-bottom: 25px;
+.hero__img-pic {
+  //max-width: 100%;
 }
 
 .hero__text {
   @include lifehack();
   font-size: 72px;
   color: $white_color;
+  padding-left: 10px;
 
+  .hero__title {
+    color: $yellow_color;
+    margin-bottom: 25px;
+    padding-top: 75px;
+  }
+
+  .hero__desc {
+    padding-top: 20px;
+  }
 }
 
 .hero__container-arrow {
