--- a/css/app.css
+++ b/css/app.css
@@ -51,28 +51,6 @@ body {
 body, html {
   height: 100%; }
 
-.wrapper {
-  position: relative;
-  width: 100%;
-  min-width: 960px;
-  min-height: 100%;
-  overflow: hidden; }
-
-.container {
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  max-width: 940px;
-  width: 95%;
-  margin: 0 auto; }
-
 .visuallyhidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -110,26 +88,45 @@ p {
   padding: 0; }
 
 footer {
+  position: relative; }
+
+.wrapper {
   position: relative;
-  width: 100%; }
+  width: 100%;
+  min-width: 960px;
+  min-height: 100%; }
+
+.container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  max-width: 940px;
+  width: 95%;
+  margin: 0 auto;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.maincontent {
+  min-height: 650px; }
 
 .section {
   height: 100vh;
-  min-height: 650px; }
-
-.wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  min-height: 0; }
-
-.maincontent {
-  height: 100%;
-  min-height: 650px; }
-
-.container {
-  width: 940px;
-  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.31);
+  min-width: 940px;
+  min-height: 650px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -138,28 +135,20 @@ footer {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
 
-.section {
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.31);
-  min-width: 940px;
-  min-height: 650px; }
-
 .hero {
-  background-image: url("../images/bg/hero-bg.png");
-  background-repeat: no-repeat;
-  background-position: -50%;
+  background: url("../images/bg/hero-bg.png") center center no-repeat;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
 
 .hero__wrapper {
   height: 80%; }
@@ -254,22 +243,62 @@ footer {
   display: -ms-flexbox;
   display: flex; }
 
-.hero__title {
-  font-family: 'Gagalin-regular', Helvetica, sans-serif;
-  font-size: 72px;
-  color: #f9b43b;
-  margin-bottom: 25px; }
-
 .hero__text {
   font-family: 'Lifehack-Medium', Helvetica, sans-serif;
   font-size: 72px;
-  color: #fff; }
+  color: #fff;
+  padding-left: 10px; }
+  .hero__text .hero__title {
+    color: #f9b43b;
+    margin-bottom: 25px;
+    padding-top: 75px; }
+  .hero__text .hero__desc {
+    padding-top: 20px; }
 
 .hero__container-arrow {
   position: absolute;
   bottom: -15%; }
 
-.order__btn {
+.best {
+  background: url("../images/bg/best.png") center center no-repeat;
+  background-size: cover;
+  text-align: center; }
+
+.best__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.best__item {
+  margin: 0 15px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
+
+.best__title {
+  color: #2f3234;
+  margin-bottom: 90px; }
+
+.best__title-item {
+  font-size: 24px;
+  font-family: 'Lifehack-Medium', Helvetica, sans-serif;
+  color: #2f3234; }
+
+.best__pic {
+  height: 90px; }
+
+.svg__icon_best-meat {
+  fill: #e45028; }
+
+.svg__icon_best-hand {
+  fill: #f9b43b; }
+
+.svg__icon_best-natural {
+  fill: #8ac03e; }
+
+.btns {
   padding: 10px 15px;
   background: #e45028;
   text-transform: uppercase;
@@ -280,5 +309,12 @@ footer {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding-left: 15px; }
+  display: inline-flex; }
+
+.section-title {
+  font-family: 'Gagalin-regular', Helvetica, sans-serif;
+  font-size: 72px; }
+
+.svg__icon {
+  width: 100%;
+  height: 100%; }
