--- a/css/app.css
+++ b/css/app.css
@@ -298,6 +298,114 @@ footer {
 .svg__icon_best-natural {
   fill: #8ac03e; }
 
+.team {
+  background: url("../images/bg/team_bg.jpg") center center no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+  position: relative; }
+
+.team__section {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  background: rgba(47, 50, 52, 0.93);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.team__content {
+  width: 70%; }
+
+.team__title {
+  margin-bottom: 90px; }
+
+.team-acco_item:active .team-acco__content {
+  height: auto; }
+
+.team-acco_item:active .team-acco__title {
+  color: #f9b43b; }
+  .team-acco_item:active .team-acco__title:before {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
+
+.team-acco__title {
+  font-family: 'Gagalin-regular', Helvetica, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .team-acco__title:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-top-color: #f9b43b;
+    border-bottom: none;
+    margin-right: 11px; }
+
+.team__title {
+  color: #f9b43b; }
+
+.team-acco__content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 19px;
+  margin-bottom: 37px;
+  overflow: hidden;
+  height: 0; }
+
+.team-acco__image {
+  margin-right: 21px; }
+
+.team-acco__avatar {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+  position: relative; }
+
+.team-acco__avatar-pic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
+
+.team-acco__occ {
+  font-family: 'ubuntu', Helvetica, sans-serif;
+  font-weight: bold;
+  color: #fff;
+  font-size: 14px;
+  margin-bottom: 23px; }
+
+.team-acco__text {
+  font-family: 'ubuntu', Helvetica, sans-serif;
+  font-weight: 300;
+  color: #fff;
+  font-size: 14px; }
+
 .btns {
   padding: 10px 15px;
   background: #e45028;
