flexbox webinar end'ed

--- a/SCSS/sections/app.scss
+++ b/SCSS/sections/app.scss
@@ -12,7 +12,11 @@
 @import "best";
 @import "goods";
 @import "team";
+@import "menu";
+@import "reviews";
+@import "order";
+
 
 //common
-
+@import "../common/fixed-menu";
 @import "../common/common";
