--- a/SCSS/common/common.scss
+++ b/SCSS/common/common.scss
@@ -1,6 +1,6 @@
 .btns {
   padding: 10px 15px;
-  background: $orange_color;
+  //background: $orange_color;
   text-transform: uppercase;
   color: $white_color;
   border-radius: 5px;
@@ -18,3 +18,4 @@
   width: 100%;
   height: 100%;
 }
+
