--- a/SCSS/config/mixins.scss
+++ b/SCSS/config/mixins.scss
@@ -5,6 +5,11 @@
   background-color: $color;
 }
 
+@mixin absolute__center () {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 //responsive
 
 @function rem($px) {
