--- a/SCSS/sections/goods.scss
+++ b/SCSS/sections/goods.scss
@@ -1,68 +1,138 @@
 .goods {
-  background: -moz-linear-gradient(top, #f9b43b 0%, #eb8d38 51%, #f9b43b 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #f9b43b 0%,#eb8d38 51%,#f9b43b 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #f9b43b 0%,#eb8d38 51%,#f9b43b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  position: relative;
+    background: -moz-linear-gradient(top, #f9b43b 0%, #eb8d38 51%, #f9b43b 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #f9b43b 0%, #eb8d38 51%, #f9b43b 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #f9b43b 0%, #eb8d38 51%, #f9b43b 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    position: relative;
 }
 
 .goods__present {
-  display: flex;
-
-
+    display: flex;
 }
 
 .goods__img {
 
 }
 
+.goods__const {
+    width: 90px;
+    height: 90px;
+    border-radius: 8%;
+    background-color: #f08c33;
+    position: absolute;
+    left: 0;
+    top: -5%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    &:hover {
+      .goods__const-hover {
+        height: 335px;
+        width: 270px;
+        border-radius: 5px;
+        background-color: #fef9f4;
+        opacity: .9;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        display: flex;
+      }
+    }
+
+    .goods__cost-img {
+        fill: #fef9f4;
+        height: 75%;
+        width: 85%;
+        padding-top: 5%;
+    }
+    .goods__const-text {
+        @include gagalin;
+        font-size: 14px;
+        color: $white_color;
+        text-align: center;
+    }
+}
+
+.goods__kkal {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    left: 0;
+    bottom: -25%;
+
+    .goods__kkal-img {
+        fill: #f8ce9c;
+        height: 75%;
+        width: 85%;
+
+    }
+
+    .goods__kkal-text {
+        @include gagalin;
+        position: absolute;
+        color: #f8ce9c;
+    }
+    .goods__kkal-num {
+        font-size: 20px;
+        top: 35%;
+        left: 25%;
+    }
+
+    .goods__kkal-value {
+        font-size: 14px;
+        left: 25%;
+    }
+}
+
 .goods__img-pic {
-  padding-top: 15%;
+    padding-top: 15%;
 }
 
 .goods__text {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 
 .goods__title {
-  color: $white_color;
-  line-height: 1;
-  margin-bottom: 50px;
+    color: $white_color;
+    line-height: 1;
+    margin-bottom: 50px;
 }
 
 .goods__desc {
-  @include ubuntu(light);
-  font-size: 14px;
-  color: $white_color;
-  margin-bottom: 30px;
-
+    @include ubuntu(light);
+    font-size: 14px;
+    color: $white_color;
+    margin-bottom: 30px;
 }
 
 .goods__price {
-  @include gagalin();
-  color: $orange_color;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-start;
-  .goods__price-summ {
-    font-size: 72px;
-    line-height: 1;
-  }
-  .goods__price-money {
-    font-size: 30px;
-    margin-left: 10px;
-  }
+    @include gagalin();
+    color: $orange_color;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    .goods__price-summ {
+        font-size: 72px;
+        line-height: 1;
+    }
+    .goods__price-money {
+        font-size: 30px;
+        margin-left: 10px;
+    }
 }
 
-
-
 .arrow-scroll_left {
-   top: 50%;
-   left: 7%;
-   transform: rotate(90deg) translateY(-50%);
- }
+    top: 50%;
+    left: 7%;
+    transform: rotate(90deg) translateY(-50%);
+}
 
 .arrow-scroll_right {
-  top: 50%;
-  right: 7%;
-  transform: rotate(270deg) translateY(-50%);
+    top: 50%;
+    right: 7%;
+    transform: rotate(270deg) translateY(-50%);
 }
